# rss-monitor

./: .gitignore  Cargo.toml  README.md
database/: database.sql  queries.sql
src/: error.rs  lib.rs  main.rs  rss.rs  utils.rs  yaml.rs
